refactor(MenuManagement): copyOf라는 불변 복사 메서드 사용